--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Animation Player by vadikmash</title>
   </head>
   <body>
-  	<h1>Welcome to the greatest landing pages of all time!</h1>
+  	<h1>Welcome to the greatest landing page of all time!</h1>
   	<h3>What it's all about</h3>
   	<p>Here you'll be able to find some info about my exeptional piskel-clone task, see how it look and even launch it if you dare!</p>
   	<a href="piskel-app/index.html">Try this App!</a>
