feat: major project restructure, canvas resize

--- a/piskel-app/index.html
+++ b/piskel-app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Animation Player by vadikmash</title>
+    <title>Piskel Clone by vadikmash</title>
   </head>
   <body>
   <script type="text/javascript" src="app.bundle.js"></script></body>
