feat: example gifs, redesign

--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Animation Player by vadikmash</title>
+    <title>Piskel Clone Landing</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  	<h1>Welcome to the greatest landing page of all time!</h1>
-  	<h3>What it's all about</h3>
-  	<p>Here you'll be able to find some info about my exeptional piskel-clone task, see how it look and even launch it if you dare!</p>
-  	<a href="piskel-app/index.html">Try this App!</a>
+    <header>
+      <h1>Welcome to the greatest landing page of all time!</h1>
+    </header>
+    <main>
+      <h2>What it's all about</h2>
+      <p>Here you'll be able to find some info about my exeptional 
+        piskel-clone task, see how it looks and even launch it if you dare!</p>
+      <a href="piskel-app/index.html"><strong>Try this App!</strong></a>
+      <h3>Examples</h3>
+      <div class="examples-wrapper">
+        <img src="img/face.gif" alt="face">
+        <img src="img/face.gif" alt="face">
+        <img src="img/face.gif" alt="face">
+        <img src="img/face.gif" alt="face">
+      </div>
+    </main>
   <script type="text/javascript" src="app.bundle.js"></script></body>
 </html>
