feat: examples download links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,30 @@
       <a href="piskel-app/index.html"><strong>Try this App!</strong></a>
       <h3>Examples</h3>
       <div class="examples-wrapper">
-        <img src="img/face.gif" alt="face">
-        <img src="img/face.gif" alt="face">
-        <img src="img/face.gif" alt="face">
-        <img src="img/face.gif" alt="face">
+        <div class="example">
+          <img src="img/face.gif" alt="face">
+          <br>
+          <a href="img/face.gif" target="_blank" download="face.gif">download .gif</a>
+          <a href="examples/face.piskelc" download="face.piskelc">download .piscelc</a>
+        </div>
+        <div class="example">
+            <img src="img/face.gif" alt="face">
+            <br>
+            <a href="img/face.gif" download>download .gif</a>
+            <a href="examples/face.piskelc" download>download .piscelc</a>
+        </div>
+        <div class="example">
+            <img src="img/face.gif" alt="face">
+            <br>
+            <a href="img/face.gif" download>download .gif</a>
+            <a href="examples/face.piskelc" download>download .piscelc</a>
+        </div>
+        <div class="example">
+            <img src="img/face.gif" alt="face">
+            <br>
+            <a href="img/face.gif" download>download .gif</a>
+            <a href="examples/face.piskelc" download>download .piscelc</a>
+        </div>
       </div>
     </main>
   <script type="text/javascript" src="app.bundle.js"></script></body>
