feat: testing google sign in

--- a/piskel-app/index.html
+++ b/piskel-app/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Piskel Clone by vadikmash</title>
   </head>
   <body>
-  <script type="text/javascript" src="app.bundle.js"></script></body>
+    <script type="text/javascript" src="app.bundle.js"></script>
+  </body>
 </html>
+
