feat: darken/lighten tools

--- a/piskel-app/index.html
+++ b/piskel-app/index.html
@@ -33,6 +33,14 @@
                 <img src="0b08562cf2ce3321b7576170efd4ce20.png" alt="pick-icon" class="tool-icon">
                 <span>(C)</span>
               </li>
+              <li id="lighten">
+                <img src="395a98ff2c91d051d40dc3ac0e183f2c.png" alt="lighten-icon" class="tool-icon">
+                <span>(P)</span>
+              </li>
+              <li id="darken">
+                <img src="22b002d701db5a48ffcf2c189d9618a1.png" alt="darken-icon" class="tool-icon">
+                <span>(P)</span>
+              </li>
               <li id="reset">
                 <img src="60f305de56a834c2a460134f8c10291d.png" alt="reset-icon" class="tool-icon">
                 <span>(R)</span>
